# CPP_ProjectTemplate

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  codecov.yml
Scripts/: travis_build_default.sh
cmake/: CompileOptions.cmake  googletest-download.cmake
include/: mycomplex.hpp
include/ProjectTemplate/: MyComplex.hpp
libs/: .gitkeep
src/: CMakeLists.txt  MyComplex.cpp  MyMain.cpp  main.cpp  mycomplex.cpp
test/: CMakeLists.txt  ComplexTest.cpp  UnitTests.cpp  complex_test.cpp  main.cpp
